Bug 352393 - Close button doesn't close
Summary: Close button doesn't close
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-07 18:12 UTC by Christophe Marin
Modified: 2015-09-07 19:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2015-09-07 18:12:05 UTC
Not a new issue but worth reporting anyway :)

When opening a new tab, only the close button on the right of the tab bar close them.
The close button on each tabs has no effect.
Comment 1 Laurent Montel 2015-09-07 19:16:57 UTC
Oh you're totally right !
I will fix it soon.
(I never use it so I didn't see this problem.).
Comment 2 Laurent Montel 2015-09-07 19:27:02 UTC
Git commit c0df7b314518bcae5bec7afc6c23f0a1c5f42012 by Montel Laurent.
Committed on 07/09/2015 at 19:26.
Pushed by mlaurent into branch 'Applications/15.08'.

Fix Bug 352393 - Close button doesn't close
FIXED-IN: 15.08.1

M  +10   -0    messagelist/pane.cpp
M  +1    -0    messagelist/pane.h

http://commits.kde.org/kdepim/c0df7b314518bcae5bec7afc6c23f0a1c5f42012