Fix Bug 352393 - Close button doesn't close

BUG: 352393
FIXED-IN: 15.08.1